menu items viewed from Postman

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -4,4 +4,4 @@ hibernate.connection.url=jdbc:postgresql://localhost:5432/postgres?currentSchema
 hibernate.connection.username=postgres
 hibernate.connection.password=password
 show_sql=true
-hbm2ddl.auto=create
+hbm2ddl.auto=update
